--- a/.github/workflows/auth-cd-test.yml
+++ b/.github/workflows/auth-cd-test.yml
@@ -25,7 +25,7 @@ jobs:
                 with:
                     context: "{{defaultContext}}:auth"
                     push: true
-                    tags: tonyq2k3/auth-microservice:${{ github.ref_name }}
+                    tags: tonyq2k3/auth-microservice:${{ github.sha }}
         
     Update-manifest:
         runs-on: ubuntu-latest
@@ -45,7 +45,7 @@ jobs:
                     git config --global user.email "ntbquoc2015@gmail.com"
                     git config --global user.name "TonyQ2k3"
                     echo "Update frontend version to ${{ github.sha }}"
-                    sed -i 's#tonyq2k3/mern-stack-frontend:[^[:space:]]*$#tonyq2k3/mern-stack-frontend:${{ github.sha }}#g' ./test/frontend/frontend-deploy.yaml
-                    git add ./test/frontend/frontend-deploy.yaml
-                    git commit -m "Update frontend version to ${{ github.sha }} in test environment"
+                    sed -i 's#tonyq2k3/auth-microservice:[^[:space:]]*$#tonyq2k3/auth-microservice:${{ github.sha }}#g' ./test/microservices/auth-service-deploy.yaml
+                    git add ./test/microservices/auth-service-deploy.yaml
+                    git commit -m "Update auth service version to ${{ github.sha }} in test environment"
                     git push origin main
