--- a/.github/workflows/auth-ci.yml
+++ b/.github/workflows/auth-ci.yml
@@ -1,24 +1,37 @@
 name: Auth Service CI
 
+
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: ["Code Analysis"]
-    types:
-      - completed
   push:
     branches:
       - "*"
     paths:
-      - "auth/**"
+      - "models/**"
+      - "routes/**"
+      - "**/*.js"
   pull_request:
-    branches: ["main"]
+    branches: ["main", "dev", "test"]
     paths:
-      - "auth/**"
-  
+      - "models/**"
+      - "routes/**"
+      - "**/*.js"
+    
 
-      
 jobs:
+  Analysis:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}  
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   Build:
     runs-on: ubuntu-latest
@@ -29,46 +42,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      working-directory: ./auth
       run: npm ci
 
     - name: Build run
-      working-directory: ./auth
       run: npm run build --if-present
       env:
         CI: ""
 
-    # - name: Test run
-    #   working-directory: ./auth
-    #   run: npm test -- --watchAll=false
-    #   env:
-    #     CI: ""
-
-    
-  Build-image:
-    needs: [Build]
-    if: ${{ success() }}
-    runs-on: ubuntu-latest
-    steps:
-    -
-      name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    -
-      name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    -
-      name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        context: "{{defaultContext}}:auth"
-        push: true
-        tags: tonyq2k3/auth-microservice:${{ github.ref_name }}
+    - name: Test run
+      run: npm test -- --watchAll=false
+      env:
+        CI: ""
