--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "auth",
   "version": "1.0.0",
   "description": "Authentication Service",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "jest",
-    "start": "nodemon index.js"
+    "test": "mocha",
+    "start": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,8 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.0"
+    "mocha": "^10.4.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   }
 }
