update: change path

--- a/.github/workflows/auth-cd-test.yml
+++ b/.github/workflows/auth-cd-test.yml
@@ -4,8 +4,7 @@ on:
     push:
         branches: ["test"]
         paths:
-            - "models/**"
-            - "routes/**"
+            - "src/**"
             - "**/*.js"
 
 jobs:
