--- a/.github/workflows/auth-cd-test.yml
+++ b/.github/workflows/auth-cd-test.yml
@@ -6,6 +6,7 @@ on:
         paths:
             - "src/**"
             - "**/*.js"
+            - "Dockerfile"
 
 jobs:
     Build-image:
@@ -20,16 +21,12 @@ jobs:
                 with:
                     username: ${{ secrets.DOCKERHUB_USERNAME }}
                     password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-            -   
-                name: Setup image tag
-                run: echo "SHORT_SHA=`echo ${{ github.sha }} | cut -c1-8`" >> $GITHUB_ENV
             -
                 name: Build and push
                 uses: docker/build-push-action@v5
                 with:
                     push: true
-                    tags: tonyq2k3/auth-microservice:test-${SHORT_SHA}
+                    tags: tonyq2k3/auth-microservice:test-${{ github.sha }}
         
     Update-manifest:
         runs-on: ubuntu-latest
@@ -52,8 +49,7 @@ jobs:
                 run: |
                     git config --global user.email "ntbquoc2015@gmail.com"
                     git config --global user.name "TonyQ2k3"
-                    echo "Update frontend version to test-${SHORT_SHA}"
-                    sed -i 's#tonyq2k3/auth-microservice:[^[:space:]]*$#tonyq2k3/auth-microservice:test-${SHORT_SHA}#g' ./test/microservices/auth-service-deploy.yaml
+                    sed -i 's#tonyq2k3/auth-microservice:[^[:space:]]*$#tonyq2k3/auth-microservice:test-${{ github.sha }}#g' ./test/microservices/auth-service-deploy.yaml
                     git add ./test/microservices/auth-service-deploy.yaml
-                    git commit -m "Update auth service version to test-${SHORT_SHA} in test environment"
+                    git commit -m "Update auth service version to test-${{ github.sha }} in test environment"
                     git push origin main
